<resources>
    <string name="app_name">Manage_it!</string>

    <!-- TaskActivity Strings -->
    <string name="title_activity_task">TaskActivity</string>
    <string name="hint_task_name">Task name</string>
    <string name="hint_note">Note</string>
    <string name="label_due_date">Due date</string>
    <string name="new_task">New task</string>
    <string name="save">Save</string>
    <string name="no_change">No changes made</string>

    <!-- TaskList Strings -->
    <string name="today">Today</string>
    <string name="no_due_date">No due date</string>
    <string name="edit_task">Edit task</string>
    <string name="none">None</string>
    <string name="tap_to_add_tasks">Tap \'+\' to add tasks</string>
    <string name="title_activity_completed_tasks">Completed tasks</string>
    <string name="title_activity_diet_manager">Diet Manager</string>
    <string name="no_tasks">No tasks</string>
    <string name="view_completed">View completed tasks</string>
    <string name="stop_ongoing_task">Stop the ongoing task first</string>
    <string name="already_selected">Task already selected</string>
    <string name="task_deleted">Task deleted</string>
    <string name="delete_task">Delete Task?</string>
    <string name="delete">delete</string>
    <string name="task_updated">Task updated</string>
    <string name="task_added">Task added</string>
    <string name="marked_complete">Marked as complete</string>
    <string name="marked_pending">Marked as pending</string>
    <string name="cannot_edit">Cannot edit active task</string>
    <string name="cannot_delete">Cannot delete active task</string>

    <!-- Timer Strings -->
    <string name="start">start</string>
    <string name="pause">pause</string>
    <string name="resume">resume</string>
    <string name="stop">stop</string>
    <string name="close">close</string>
    <string name="skip">skip</string>
    <string name="press_exit">Press again to exit</string>
    <string name="free_task">Free task</string>
    <string name="break_over">Break over</string>
    <string name="resume_work">Resume work?</string>
    <string name="take_a_break">Take a break?</string>
    <string name="work_session_complete">Work session complete</string>
    <string name="start_long_break">Start long break?</string>
    <string name="start_short_break">Start short break?</string>

    <!-- Preference Names -->
    <string name="title_settings">Settings</string>
    <string name="category_timer">Timer durations</string>
    <string name="label_work">Work duration</string>
    <string name="label_break">Break duration</string>
    <string name="label_longBreak">Long break duration</string>
    <string name="label_sessions">Work sessions before a long break</string>
    <string name="category_work">Work session</string>
    <string name="label_silent">Disable sound and vibration</string>
    <string name="label_wifi">Disable Wi-Fi</string>
    <string name="category_notification">Notification settings</string>
    <string name="label_sound">Sound</string>
    <string name="label_vibrate">Vibration</string>
    <string name="label_screen_on">Keep screen ON</string>
    <string name="label_resume_app">Resume app on session end</string>

    <!-- Preference Keys -->
    <string name="key_work">pref_work</string>
    <string name="key_break">pref_break</string>
    <string name="key_longBreak">pref_longBreak</string>
    <string name="key_sessions">pref_sessions</string>
    <string name="key_ringerMode">pref_ringerMode</string>
    <string name="key_wifi">pref_wifi</string>
    <string name="key_sound">pref_sound</string>
    <string name="key_vibrate">"pref_vibrate</string>
    <string name="key_screen_on">"pref_screen_on</string>
    <string name="key_resume_app">"pref_resume_app"</string>

    <!-- Preference Measurements -->
    <string name="minutes">minutes</string>
    <string name="sessions">sessions</string>
    <string name="send_feedback">Send feedback</string>

    <!-- About Activity -->
    <string name="title_activity_about">About</string>
    <string name="version">Version 1.0.0</string>
    <string name="developer">Developer</string>
    <string name="developer_name">Muhammad Ikhwani</string>
    <string name="licenses_heading">Open Source Licenses</string>
    <string name="rate_app">Rate this app</string>
    <string name="dicard">DISCARD</string>
    <string name="discard_changes">Discard changes?</string>
    <string name="enter_task_first">Enter a task first</string>


    <!-- Diet Manager -->
    <string name="action_diet_manager">Diet Manager</string>
    <string name="Diet_Plan">Diet Plan</string>
    <string name="Fat_Burning_Drinks">Drink Suggestions</string>
    <string name="Exercise">Exercise</string>
    <string name="Food_Suggestions">Food Suggestions</string>
    <string name="Save">Save</string>
    <string name="Drinks">Drinks</string>
    <string name="Drinks_detail">Drinks detail</string>
    <string name="AddExercise">Add Exercise</string>


    <string name="Enter_here">Enter here</string>
    <string name="Ingredients">Ingredients</string>
    <string name="Add">Add</string>
    <string name="Minty_Lemon">Minty Lemon</string>
    <string name="Banana_Smoothie">Banana Smoothie</string>
    <string name="Berry_Flusher">Berry Flusher</string>
    <string name="Berry_Lemon_Apple_Cider_Vinegar">Berry Lemon Apple Cider Vinegar</string>
    <string name="Cellulite_Juice">The Cellulite Juice</string>
    <string name="Cucumber_Drink">Cucumber Drink</string>
    <string name="Melon_Detox_Water">Melon Detox Water</string>
    <string name="Green_Tea_Detox">Green Tea Detox</string>
    <string name="Super_Belly_Fat_Cutter">Super Belly Fat Cutter</string>


    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="Saturday">Saturday</string>
    <string name="Sunday">Sunday</string>

    <string-array name="excercise">
        <item>Please Select Exercise </item>
        <item>Crunches</item>
        <item>Chest</item>
        <item>Biceps</item>
   <!--     <item>My Plan</item>  -->
    </string-array>


    <string-array name="Zone">
        <item>Select Time</item>
        <item>Morning</item>
        <item>Evening</item>
    </string-array>

    <string-array name="Days">
        <item>Select Day</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
    </string-array>

    <string-array name="Workout">
        <item>Select Excercise</item>
        <item>Crunches</item>
        <item>Chest</item>
        <item>Biceps</item>
        <item>Tricep</item>
        <item>Squats</item>
    </string-array>


</resources>
