<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="?attr/actionBarSize">
<!--
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_diet_manager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
    />
-->
    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ActivityDietManager">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="0dp"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/diet_manager_diet_header" />

            <android.support.v7.widget.CardView
                android:id="@+id/card1"
                android:layout_width="165dp"
                android:layout_height="148dp"
                android:layout_below="@+id/header"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="7dp"
                android:layout_marginRight="10sp"
                android:layout_marginBottom="10sp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/colorPrimary">

                <ImageButton
                    android:id="@+id/diet_plan"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10sp"
                    android:layout_marginRight="10sp"
                    android:layout_marginBottom="10sp"
                    android:adjustViewBounds="true"
                    android:background="@color/colorPrimary"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_diet_manager_diet" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="120dp"
                    android:gravity="center"
                    android:text="@string/Diet_Plan"
                    android:textColor="@color/colorWhite"
                    android:textSize="15dp" />

            </android.support.v7.widget.CardView>
            <!--
            <android.support.v7.widget.CardView
                android:id="@+id/card2"
                android:layout_width="175dp"
                android:layout_height="148dp"
                android:layout_marginLeft="5sp"
                android:layout_marginTop="223sp"
                android:layout_marginRight="10sp"
                android:layout_marginBottom="10sp"
                android:layout_toRightOf="@+id/card1"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/purpleBg">


                <ImageButton
                    android:id="@+id/sugges"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10sp"
                    android:layout_marginRight="10sp"
                    android:layout_marginBottom="10sp"
                    android:adjustViewBounds="true"
                    android:background="@color/purpleBg"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_diet_manager_salad" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="120dp"
                    android:gravity="center"
                    android:textColor="@color/colorWhite"
                    android:text="@string/Food_Suggestions"
                    android:textSize="15dp" />

            </android.support.v7.widget.CardView>
-->
            <android.support.v7.widget.CardView
                android:id="@+id/card3"
                android:layout_width="165dp"
                android:layout_height="148dp"
                android:layout_below="@+id/header"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="112dp"
                android:layout_marginLeft="112dp"
                android:layout_marginTop="158dp"
                android:layout_marginEnd="107dp"
                android:layout_marginRight="107dp"
                android:layout_marginBottom="10sp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/colorPrimary">

                <ImageButton
                    android:id="@+id/simpleexe"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10sp"
                    android:layout_marginRight="10sp"
                    android:layout_marginBottom="10sp"
                    android:adjustViewBounds="true"
                    android:background="@color/colorPrimary"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_diet_manager_excercise" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="120dp"
                    android:gravity="center"
                    android:text="@string/Exercise"
                    android:textColor="@color/colorWhite"
                    android:textSize="15dp" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card4"
                android:layout_width="175dp"
                android:layout_height="148dp"
                android:layout_below="@+id/header"
                android:layout_marginLeft="34dp"
                android:layout_marginTop="7dp"
                android:layout_marginRight="10sp"
                android:layout_marginBottom="10sp"
                android:layout_toRightOf="@+id/card1"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/colorPrimary">

                <ImageButton
                    android:id="@+id/fatdrink"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10sp"
                    android:layout_marginRight="10sp"
                    android:layout_marginBottom="10sp"
                    android:adjustViewBounds="true"
                    android:background="@color/colorPrimary"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_diet_manager_glass" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="120dp"
                    android:gravity="center"
                    android:text="@string/Fat_Burning_Drinks"
                    android:textColor="@color/colorWhite"
                    android:textSize="15dp" />

            </android.support.v7.widget.CardView>

        </RelativeLayout>

    </android.support.constraint.ConstraintLayout>
</RelativeLayout>